--- a/package.json
+++ b/package.json
@@ -1,4 +1,5 @@
 {
+  "name": "model-store",
   "private": true,
   "scripts": {
     "dev": "next dev --turbo",
@@ -14,7 +15,9 @@
     "singleQuote": true
   },
   "dependencies": {
+    "@apollo/client": "3.7.11",
     "clsx": "1.2.1",
+    "graphql": "16.6.0",
     "next": "latest",
     "react": "18.2.0",
     "react-dom": "18.2.0",
