--- a/package.json
+++ b/package.json
@@ -6,7 +6,8 @@
     "build": "next build",
     "start": "next start",
     "lint": "next lint",
-    "format": "prettier --write \"**/*.{js,ts,tsx,md}\""
+    "format": "prettier --write \"**/*.{js,ts,tsx,md}\"",
+    "codegen": "graphql-codegen --config codegen.ts"
   },
   "prettier": {
     "arrowParens": "always",
@@ -16,16 +17,26 @@
   },
   "dependencies": {
     "@apollo/client": "3.7.11",
+    "@tanstack/react-query-devtools": "4.29.1",
     "clsx": "1.2.1",
     "graphql": "16.6.0",
+    "graphql-request": "5.2.0",
     "next": "latest",
     "react": "18.2.0",
     "react-dom": "18.2.0",
+    "react-query": "3.39.3",
     "styled-components": "6.0.0-beta.2",
     "styled-jsx": "5.1.0",
     "use-count-up": "3.0.1"
   },
   "devDependencies": {
+    "@graphql-codegen/cli": "3.3.0",
+    "@graphql-codegen/client-preset": "3.0.0",
+    "@graphql-codegen/introspection": "3.0.1",
+    "@graphql-codegen/typescript": "3.0.3",
+    "@graphql-codegen/typescript-apollo-client-helpers": "2.2.6",
+    "@graphql-codegen/typescript-operations": "3.0.3",
+    "@graphql-codegen/typescript-react-apollo": "3.3.7",
     "@types/node": "18.0.3",
     "@types/react": "18.0.15",
     "@types/react-dom": "18.0.6",
