--- a/package.json
+++ b/package.json
@@ -3,6 +3,7 @@
   "private": true,
   "scripts": {
     "dev": "next dev --turbo",
+    "dev0": "next dev",
     "build": "next build",
     "start": "next start",
     "lint": "next lint",
@@ -17,16 +18,21 @@
   },
   "dependencies": {
     "@apollo/client": "3.7.11",
+    "@react-three/drei": "9.64.0",
+    "@react-three/fiber": "8.12.0",
     "@tanstack/react-query-devtools": "4.29.1",
+    "atropos": "1.0.2",
     "clsx": "1.2.1",
     "graphql": "16.6.0",
     "graphql-request": "5.2.0",
     "next": "latest",
+    "next-transpile-modules": "10.0.0",
     "react": "18.2.0",
     "react-dom": "18.2.0",
     "react-query": "3.39.3",
     "styled-components": "6.0.0-beta.2",
     "styled-jsx": "5.1.0",
+    "three": "0.151.3",
     "use-count-up": "3.0.1"
   },
   "devDependencies": {
@@ -37,16 +43,17 @@
     "@graphql-codegen/typescript-apollo-client-helpers": "2.2.6",
     "@graphql-codegen/typescript-operations": "3.0.3",
     "@graphql-codegen/typescript-react-apollo": "3.3.7",
-    "@types/node": "18.0.3",
+    "@types/node": "18.15.11",
     "@types/react": "18.0.15",
     "@types/react-dom": "18.0.6",
+    "@types/three": "0.150.1",
     "autoprefixer": "^10.4.7",
-    "eslint": "8.19.0",
+    "eslint": "8.38.0",
     "eslint-config-next": "latest",
     "postcss": "^8.4.14",
     "prettier": "^2.7.1",
-    "prettier-plugin-tailwindcss": "^0.1.12",
+    "prettier-plugin-tailwindcss": "0.2.7",
     "tailwindcss": "^3.1.6",
-    "typescript": "4.7.4"
+    "typescript": "5.0.4"
   }
 }
