--- a/package.json
+++ b/package.json
@@ -20,6 +20,8 @@
     "@apollo/client": "3.7.11",
     "@react-three/drei": "9.64.0",
     "@react-three/fiber": "8.12.0",
+    "@tailwindcss/forms": "0.5.3",
+    "@tailwindcss/typography": "0.5.9",
     "@tanstack/react-query-devtools": "4.29.1",
     "atropos": "1.0.2",
     "clsx": "1.2.1",
